--- a/index.html
+++ b/index.html
@@ -4,9 +4,119 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pare Pare</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <div class="header_block">
+        </div>
+            <!-- TURUNIN OPACITY SELAGI NGE SCROLL -->
+        <script>
+            const opacityElement = document.querySelector('.header_block');
+            window.onscroll = function() {
+                let scrollPosition = window.scrollY;
+                let opacity = 1 - scrollPosition / 1000;
+                if (opacity < 0) opacity = 0;
+                opacityElement.style.opacity = opacity;
+            };
+        </script>
+        </div>
+        <div class="content">
+                <a href="index.html" class="logo">
+                    <img src="res\Lambang_Kota_Parepare_(2012).png" alt="">
+                </a>
+                <a href="maps.html" class="maps">
+                    <img src="res/location.png" alt="">
+                </a>
+                <ul class="navbar_links">
+                    <li><a href="index.html">What's On</a></li>
+                    <li><a href="index.html">Stroll Around</a></li>
+                    <li><a href="index.html">Culinary</a></li>
+                    <li><a href="index.html">Accomodations</a></li>
+                </ul>
+        </div> 
+    </nav>
+    <!-- LANDING PAGE -->
+    <div class="landing_page">
+        <!-- BG IMG -->
+        <div class="background_image">
+            <img src="res\Monumen_Habibie_Ainun.jpg" alt="">
+            <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#FDF24A" fill-opacity="1" d="M0,32L20,42.7C40,53,80,75,120,85.3C160,96,200,96,240,80C280,64,320,32,360,42.7C400,53,440,107,480,117.3C520,128,560,96,600,106.7C640,117,680,171,720,186.7C760,203,800,181,840,149.3C880,117,920,75,960,64C1000,53,1040,75,1080,74.7C1120,75,1160,53,1200,64C1240,75,1280,117,1320,138.7C1360,160,1400,160,1420,160L1440,160L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z">
+            </path>
+            </svg>
+        </div>
+        <!-- HEADER LANDING -->
+        <div class="TEXT_LANDING">
+            <h1 class="landing_text">
+                KOTA CINTA
+            </h1>
+            <h1 class="landing_text_1">
+                SEJATI
+            <!-- SHADOW -->
+            </h1>
+            <h1 class="landing_text_shadow">
+                KOTA CINTA
+            </h1>
+            <h1 class="landing_text_1_shadow">
+                SEJATI
+            </h1>
+        </div>
+    </div>
+    <!-- DESCRIPTION SECTION -->
+    <div class="desc">
+        <!-- HEADER -->
+        <h1 class="desc_head">
+            PARE PARE
+        </h1>
+        <h1 class="desc_head_shadow">
+            PARE PARE
+        </h1>
+        <h1 class="desc_head_shadow_black">
+            PARE PARE
+        </h1>
+        <!-- DESCRIPTION -->
+        <div class="description">
+            <p class="desc_paragraph_1">
+                A coastal city in Indonesia, birthplace B.J. Habibie,
+            </p>
+            <p class="desc_paragraph_2">
+                Renowned for its scenic views and rich Bugis culture,
+            </p>
+            <p class="desc_paragraph_3">
+                It remains a cultural and historical landmark.
+            </p>
+        </div>
+    </div>
+    <!-- FOOTER -->
+    <div class="footer">
+        <div class="footer_block">
+            <div class="content">
+                </a>
+                <ul class="footer_links">
+                    <div class="footer_left">
+                        <li><h2>Contact Us</h2></li>
+                        <div class="footer_left_links">
+                            <li><a href="index.html">Nama Kedinasan</a></li>
+                            <li><a href="index.html">Alamat Kedinasan</a></li>
+                            <li><a href="index.html">No. Telp</a></li>
+                            <li><a href="index.html">Email@gmail.com</a></li>
+                        </div>
+                    </div>
+                    <div class="footer_right">
+                        <li><h2>Connect</h2></li>
+                        <div class="footer_right_links">
+                            <li><a href="index.html">Instagram</a></li>
+                            <li><a href="index.html">Twitter</a></li>
+                            <li><a href="index.html">Facebook</a></li>
+                            <li><a href="index.html">Tiktok</a></li>
+                        </div>
+                    </div>
+                </ul>
+            </div> 
+        </div>
+    </div>
 </body>
 </html>
