--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
     <!-- FOOTER -->
     <div class="footer">
         <div class="footer_block">
+            <div class="identitas">
+                <p class="nama">
+                    Dimas Nauli Satria Addin Sinaga
+                </p>
+                <p class="nim">
+                    2401010179
+                </p>
+                <p class="kelas">
+                    Kelas M
+                </p>
+            </div>
             <div class="content">
                 </a>
                 <ul class="footer_links">
@@ -118,5 +129,7 @@
             </div> 
         </div>
     </div>
+    <!-- Identitas -->
+
 </body>
 </html>
